--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dicebear/avatars": "^4.10.2",
+    "@dicebear/pixel-art": "^4.10.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "random-avatar-generator": "^2.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
